syntax = "proto3";

package com.example.grpc;

option java_package = "com.example.grpc";
option java_multiple_files = true;

service MediaService {
    rpc GetMediaByFeedIds (MediaRequest) returns (MediaResponse);
}

message MediaRequest {
    repeated string feedIds = 1; // Danh sách feedId cần lấy dữ liệu
}

message MediaResponse {
    repeated FeedMedia feedMediaList = 1; // Danh sách dữ liệu trả về
}

message FeedMedia {
    string feedId = 1; // ID của bài post
    repeated MediaResource resource = 2; // Danh sách ảnh/video
}

message MediaResource {
    string mediaId = 1;
    string url = 2;
    string postId = 3;
    int32 width = 4;
    int32 height = 5;
    string mediaType = 6; // IMAGE, VIDEO, etc.
}